/********************************************************************************
 * Copyright (c) 2026 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * SPDX-License-Identifier: Apache-2.0
 ********************************************************************************/

#ifndef SCORE_CRYPTO_SRC_API_OBJECTS_I_PUBLIC_KEY_OBJECT_HPP
#define SCORE_CRYPTO_SRC_API_OBJECTS_I_PUBLIC_KEY_OBJECT_HPP

#include "score/crypto/src/api/objects/i_key_object.hpp"
#include "score/result/result.h"
#include "score/span.hpp"

#include <cstddef>
#include <cstdint>
#include <memory>

namespace score
{

namespace crypto
{

/// @brief Typed view of public key material.
///
/// Extends IKeyObject with the ability to export the public key bytes.
/// Obtained by down-casting an IKeyObject whose role is "public".
class IPublicKeyObject : public IKeyObject
{
  public:
    using Uptr = std::unique_ptr<IPublicKeyObject>;

    ~IPublicKeyObject() override = default;

    IPublicKeyObject(const IPublicKeyObject&) = delete;
    IPublicKeyObject& operator=(const IPublicKeyObject&) = delete;
    IPublicKeyObject(IPublicKeyObject&&) = default;
    IPublicKeyObject& operator=(IPublicKeyObject&&) = default;

    /// @brief Exports the public key bytes into the provided buffer.
    /// @param output Destination buffer
    /// @return Number of bytes written, or error if buffer is too small
    virtual score::Result<std::size_t> ExportPublicKey(score::cpp::span<uint8_t> output) const = 0;

  protected:
    IPublicKeyObject() = default;
};

}  // namespace crypto

}  // namespace score

#endif  // SCORE_CRYPTO_SRC_API_OBJECTS_I_PUBLIC_KEY_OBJECT_HPP
